kubernetes/apps/media/romm/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: romm
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - romm.blackcats.cc
  rules:
    - backendRefs:
        - name: romm
          port: 8080
